--- a/publication/journal-article/cite.bib
+++ b/publication/journal-article/cite.bib
@@ -1,8 +1,8 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
+@article{HW2021,
+  title = {A Note on Electrified Droplets},
+  author={Nathan Hayford and Fudong Wang},
+  journal = {Computational Methods and Function Theory},
+  year    = 2021,
   volume  = 1,
   number  = 1
 }
